--- a/arch/arm64/configs/lineage_cheeseburger_defconfig
+++ b/arch/arm64/configs/lineage_cheeseburger_defconfig
@@ -556,13 +556,15 @@ CONFIG_CPU_IDLE_GOV_MENU=y
 CONFIG_CPU_FREQ=y
 CONFIG_CPU_FREQ_GOV_COMMON=y
 # CONFIG_CPU_FREQ_STAT is not set
-CONFIG_CPU_FREQ_DEFAULT_GOV_PERFORMANCE=y
+# CONFIG_CPU_FREQ_DEFAULT_BLU_ACTIVE is not set
+# CONFIG_CPU_FREQ_DEFAULT_GOV_PERFORMANCE is not set
 # CONFIG_CPU_FREQ_DEFAULT_GOV_POWERSAVE is not set
 # CONFIG_CPU_FREQ_DEFAULT_GOV_USERSPACE is not set
 # CONFIG_CPU_FREQ_DEFAULT_GOV_ONDEMAND is not set
 # CONFIG_CPU_FREQ_DEFAULT_GOV_CONSERVATIVE is not set
-# CONFIG_CPU_FREQ_DEFAULT_GOV_INTERACTIVE is not set
+CONFIG_CPU_FREQ_DEFAULT_GOV_INTERACTIVE=y
 # CONFIG_CPU_FREQ_DEFAULT_GOV_SCHED is not set
+CONFIG_CPU_FREQ_GOV_BLU_ACTIVE=y
 CONFIG_CPU_FREQ_GOV_PERFORMANCE=y
 CONFIG_CPU_FREQ_GOV_POWERSAVE=y
 CONFIG_CPU_FREQ_GOV_USERSPACE=y
@@ -571,6 +573,24 @@ CONFIG_CPU_FREQ_GOV_INTERACTIVE=y
 CONFIG_CPU_FREQ_GOV_CONSERVATIVE=y
 CONFIG_CPU_BOOST=y
 # CONFIG_CPU_FREQ_GOV_SCHED is not set
+
+#
+# IOScheds
+#
+CONFIG_DEFAULT_DEADLINE=y
+CONFIG_DEFAULT_IOSCHED="deadline"
+CONFIG_IOSCHED_NOOP=y
+CONFIG_IOSCHED_DEADLINE=y
+CONFIG_IOSCHED_CFQ=y
+CONFIG_IOSCHED_TEST=y
+CONFIG_IOSCHED_BFQ=y
+CONFIG_IOSCHED_FIOPS=y
+CONFIG_IOSCHED_SIO=y
+CONFIG_IOSCHED_FIFO=y
+CONFIG_IOSCHED_SIOPLUS=y
+CONFIG_IOSCHED_TRIPNDROID=y
+CONFIG_IOSCHED_VR=y
+CONFIG_IOSCHED_ZEN=y
 
 #
 # CPU frequency scaling drivers
@@ -2950,6 +2970,7 @@ CONFIG_FB_MSM_MDSS_WRITEBACK=y
 CONFIG_FB_MSM_MDSS_DP_PANEL=y
 # CONFIG_FB_MSM_MDSS_MDP3 is not set
 CONFIG_FB_MSM_MDSS_XLOG_DEBUG=y
+CONFIG_FB_MSM_MDSS_KCAL_CTRL=y
 # CONFIG_FB_SSD1307 is not set
 # CONFIG_FB_SM712 is not set
 # CONFIG_BACKLIGHT_LCD_SUPPORT is not set
@@ -4677,6 +4698,7 @@ CONFIG_NLS_ISO8859_1=y
 # CONFIG_NLS_MAC_TURKISH is not set
 # CONFIG_NLS_UTF8 is not set
 # CONFIG_DLM is not set
+CONFIG_DYNAMIC_FSYNC=y
 # CONFIG_VIRTUALIZATION is not set
 
 #
